--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:mysql://localhost/kanban?createDatabaseIfNotExist=tru
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+api.security.token.secret=minha-chave-secreta
